# NovaExternal

./: CMakeLists.txt  entry.cpp  globals.hpp  offsets.hpp
Roblox/: Cheat.cpp  Cheat.hpp  Instance.cpp  Instance.hpp  TeleportHandler.cpp  TeleportHandler.hpp
driver/: Driver.cpp  Driver.hpp  librarys.hpp
utils/datamodel/: DataModel.cpp  DataModel.hpp
utils/logs/: LogInterceptor.cpp  LogInterceptor.hpp
utils/overlay/: overlay.cpp  overlay.hpp
